# theoryandpractice-2026

./: .gitignore  CHANGELOG.md  README.md  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
content/: casseville-checkers-project.md  citations-manual.json  citations.json  collaborators.yml  cranmer-2025-lt10authors.bib  cranmer-2025-lt20authors.bib  iris-map-test.md  media.yml  migrating-with-claude.md  pelican-cite.md  presentations.yml  projects.yml  sbi-example.md  selected-publications.bib  selected-publications.yml  year-in-review-2025.md
content/css/: pelican-cite.css
content/downloads/notebooks/: raindrop_simulator.ipynb
content/pages/: CV.md  Home.md  impactstory.md
plugins/i18n_init/: __init__.py
plugins/pelican-bibtex/: pelican_bibtex.py
plugins/pelican-cite/src/pelican_cite/: pelican_cite.py
plugins/pelican-collaborators/: README.md  __init__.py  collaborators.py
plugins/pelican-media/: README.md  __init__.py  media.py
plugins/pelican-projects/: README.md  __init__.py  projects.py
plugins/pelican-selected-publications/: README.md  __init__.py  selected_publications.py
plugins/pelican_javascript/: __init__.py
scripts/: fetch-collaborator-photos.py  parse_google_alerts.py  search_media.py  update_citations.py  update_citations_new.py  update_collaborator_years.py
themes/pelican-bootstrap3/static/css/: style.css
themes/pelican-bootstrap3/templates/: article.html  base.html  collaborators.html  media.html  presentations.html  projects-draft.html  projects.html  publications.html  search.html  selected-publications.html
themes/pelican-bootstrap3/templates/includes/: sidebar.html
themes/pelican-bootstrap3/templates/includes/sidebar/: social.html
