[project]
authors = [{name = "Kyle Cranmer", email = "kyle.cranmer@wisc.edu"}]
name = "theoryandpractice-2026"
description = "Kyle Cranmer's personal website - Theory And Practice"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [
    "pelican[markdown]>=4.11.0",
    "pelican-render-math",
    "pelican-liquid-tags",
    "pelican-neighbors",
    "pelican-sitemap",
    "typogrify",
    "beautifulsoup4",
    "lxml",
    "pybtex",
    "markdown>=3.4",
    "ghp-import",
    "nbconvert",
    "ipython",
    "jupyter",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
# pelican-jupyter for notebook support - installed from PyPI
pelican-jupyter = "*"
# pelican-presentations for displaying talks/presentations
pelican-presentations = { git = "https://github.com/cranmer/pelican-presentations.git" }

[tool.pixi.dependencies]
python = ">=3.11"
nodejs = ">=18"

[tool.pixi.tasks]
# Build the site
build = "pelican content -o output -s pelicanconf.py && npm exec pagefind -- --site output"
# Build for production
publish = "pelican content -o output -s publishconf.py && npm exec pagefind -- --site output"
# Clean the output directory
clean = "rm -rf output cache"
# Development server (clean, build, then serve)
serve = "rm -rf output cache && pelican content -o output -s pelicanconf.py && npm exec pagefind -- --site output && python -m http.server 8000 -d output"
# Update citation counts from OpenAlex
update-citations = "python scripts/update_citations.py"
# Update citations for NEW entries only (not already in citations.json)
update-citations-new = "python scripts/update_citations_new.py"
# Update collaborator start_year/end_year from OpenAlex co-authorship data
update-collaborator-years = "python scripts/update_collaborator_years.py"
# Build and serve (no autoreload - run 'pixi run build' to rebuild)
dev = "pelican content -o output -s pelicanconf.py && python -m http.server 8000 -d output"
# Dev server with debug output to see build order
dev-debug = "pelican content -o output -s pelicanconf.py && pelican content -o output -s pelicanconf.py --autoreload --listen --debug"
# Watch for changes and rebuild (run in separate terminal)
watch = "pelican content -o output -s pelicanconf.py --autoreload"
# Search for new media mentions
search-media = "python scripts/search_media.py"
# Parse Google Alerts from MBOX export
parse-alerts = "python scripts/parse_google_alerts.py"
